--- a/.github/workflows/DataUpdate.yaml
+++ b/.github/workflows/DataUpdate.yaml
@@ -1,8 +1,7 @@
 name: Data-Update
 on: 
   schedule:
-  # - cron: "40 8 * * *"
-  - cron: "*/15 * * * *"
+  - cron: "40 8 * * *"
 jobs:
   update-data:
     name: Update data from remote
