Add pull before python script

--- a/.github/workflows/DataUpdate.yaml
+++ b/.github/workflows/DataUpdate.yaml
@@ -26,7 +26,9 @@ jobs:
           python-version: '3.x' # Version range or exact version of a Python version to use, using SemVer's version range syntax
           architecture: 'x64'
       - name: Run script
-        run: python convert_csv_to_json.py
+        run: |
+          git pull origin master
+          python convert_csv_to_json.py
       - name: Commit and merge
         run: |
           git add .
