--- a/.github/workflows/DataUpdate.yaml
+++ b/.github/workflows/DataUpdate.yaml
@@ -1,7 +1,7 @@
 name: Data-Update
 on: 
   schedule:
-  - cron: "20 13 * * *"
+  - cron: "*/5 * * * *"
 jobs:
   update-data:
     name: Update data from remote
