Remove git pull before python script, add git config pull.ff only

--- a/.github/workflows/DataUpdate.yaml
+++ b/.github/workflows/DataUpdate.yaml
@@ -26,12 +26,11 @@ jobs:
           python-version: '3.x' # Version range or exact version of a Python version to use, using SemVer's version range syntax
           architecture: 'x64'
       - name: Run script
-        run: |
-          git pull origin master
-          python convert_csv_to_json.py
+        run: python convert_csv_to_json.py
       - name: Commit and merge
         run: |
           git add .
           git commit -m "Update data (auto)"
+          git config pull.ff only
           git pull origin master
           git push origin master 
