--- a/.github/workflows/DataUpdate.yaml
+++ b/.github/workflows/DataUpdate.yaml
@@ -19,8 +19,6 @@ jobs:
           git remote add upstream https://github.com/CSSEGISandData/COVID-19
           git fetch upstream
           git branch
-          git status
-          git log
           git merge upstream/master
       - name: Setup python
         uses: actions/setup-python@v2
@@ -33,6 +31,6 @@ jobs:
         run: |
           git add .
           git commit -m "Update data (auto)"
-          git config pull.ff only
+          git config pull.rebase true
           git pull origin master
           git push origin master 
