--- a/.github/workflows/DataUpdate.yaml
+++ b/.github/workflows/DataUpdate.yaml
@@ -16,10 +16,10 @@ jobs:
         run: |
           git config --global user.name ${{github.actor}}
           git config --global user.email ${{github.actor}}@users.noreply.github.com
+          git pull origin master
           git remote add upstream https://github.com/CSSEGISandData/COVID-19
           git fetch upstream
-          git branch
-          git merge upstream/master
+          git merge -X theirs upstream/master
       - name: Setup python
         uses: actions/setup-python@v2
         with:
@@ -31,6 +31,4 @@ jobs:
         run: |
           git add .
           git commit -m "Update data (auto)"
-          git config pull.rebase true
-          git pull origin master
           git push origin master 
